--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Challenge_1/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!--Changed the title to better describing name of the website-->
     <title>Horiseon</title>
 </head>
