--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
+    <aside>
         <div>
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" alt=" ">
@@ -67,6 +68,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+    </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
